--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -45,7 +45,7 @@
       <footer>
         <p><small>
   <!-- start of Karl's footer; modify this part -->
-  <a href="https://vlsiarch.ecen.okstate.edu">James E. Stine, Jr.</a> 
+  <a href="https://experts.okstate.edu/james.stine">James E. Stine, Jr.</a> 
   <a href="https://twitter.com/jamesstinejr?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @jamesstinejr</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>  
   <!-- end of Karl's footer; modify this part -->
         </small></p>
